<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <RadioGroup
        android:id="@+id/rg_chartUnitSelector_minute"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_chartUnitSelector_minute1"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chart_unitMinute_1"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartUnitSelector_minute3"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:checked="true"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chart_unitMinute_3"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartUnitSelector_minute5"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chart_unitMinute_5"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartUnitSelector_minute10"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chart_unitMinute_10"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartUnitSelector_minute15"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chart_unitMinute_15"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartUnitSelector_minute30"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chart_unitMinute_30"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartUnitSelector_minute60"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chart_unitMinute_60"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartUnitSelector_minute240"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chart_unitMinute_240"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>