<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <RadioGroup
        android:id="@+id/rg_chartMainIndicatorSelector"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_chartMainIndicatorSelector_movingAvg"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chartMainIndicatorSelector_movingAverage"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartMainIndicatorSelector_bollingerBands"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chartMainIndicatorSelector_bollingerBands"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartMainIndicatorSelector_dailyBalanceTable"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chartMainIndicatorSelector_dailyBalanceTable"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartMainIndicatorSelector_pivot"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chartMainIndicatorSelector_pivot"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartMainIndicatorSelector_envelopes"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chartMainIndicatorSelector_envelopes"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rb_chartMainIndicatorSelector_priceChannels"
            style="@style/NoIconRadioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/back_chart_unit_button"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/chartMainIndicatorSelector_priceChannels"
            android:textColor="@color/color_chart_unit_selector"
            android:textSize="14dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>